# llmup

./: .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/llmup-download/: Cargo.toml
crates/llmup-download/src/: http.rs  ollama.rs  utils.rs
crates/llmup-hf/: Cargo.toml
crates/llmup-llama-cpp/: Cargo.toml
crates/llmup-llama-cpp-sys/: Cargo.toml  build.rs
crates/llmup-llama-cpp-sys/src/: lib.rs
crates/llmup-llama-cpp/src/: batch.rs  context.rs  lib.rs  log.rs  model.rs  sampler.rs  token.rs  tokendata.rs  vocab.rs
crates/llmup-run/: Cargo.toml
crates/llmup-run/src/: lib.rs  ollama.rs  template.rs
crates/llmup-store/: Cargo.toml
crates/llmup-store/src/: ollama.rs
crates/skelm-download/: Cargo.toml
crates/skelm-download/src/: lib.rs  utils.rs
crates/skelm-exec/: Cargo.toml
crates/skelm-exec/src/: lib.rs  template.rs
crates/skelm-hf/: Cargo.toml
crates/skelm-llama-cpp/: Cargo.toml
crates/skelm-llama-cpp-sys/: Cargo.toml  build.rs
crates/skelm-llama-cpp-sys/src/: lib.rs
crates/skelm-llama-cpp/src/: batch.rs  context.rs  log.rs  model.rs  sampler.rs  tokendata.rs  vocab.rs
crates/skelm-ollama/: Cargo.toml
crates/skelm-ollama/src/: http.rs  lib.rs  run.rs  storage.rs
llmup-chat/: Cargo.toml  README.md
llmup-chat/src/: assets.rs  helper.rs  lib.rs  main.rs  playground.rs  sidebar.rs  themes.rs  title.rs
llmup-cli/: Cargo.toml
llmup-cli/src/: args.rs  main.rs  run.rs
skelm-cli/: Cargo.toml
skelm-cli/src/: human.rs  main.rs  progressbar.rs  run.rs
src/: args.rs  human.rs  main.rs  progressbar.rs  run.rs
