[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Vincent Hanquez <vincent@coretype.io>"
]
repository = "https://github.com/vincenthz/llmup"
keywords = ["AI", "llama", "mlx", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[workspace]
members = [
    "crates/llmup-download",
    "crates/llmup-llama-cpp-sys",
    "crates/llmup-llama-cpp",
    "crates/llmup-hf",
    "crates/llmup-run",
    "crates/skelm-ollama",
    "llmup-cli",
]

resolver = "2"

[workspace.dependencies]
llmup-download = { version = "0.1", path = "crates/llmup-download" }
llmup-run = { version = "0.1", path = "crates/llmup-run" }
llmup-llama-cpp-sys = { version = "0.1", path = "crates/llmup-llama-cpp-sys" }
llmup-llama-cpp = { version = "0.1", path = "crates/llmup-llama-cpp" }
skelm-ollama = { version = "0.1", path = "crates/skelm-ollama" }

#mlx-lm = { version = "0.0.1" }
#mlx-lm-utils = { version = "0.0.1" }

tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
