[package]
name = "llmup-chat"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gpui = "*"
gpui-component = "0.3.0-preview1"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

llmup-run.workspace = true
llmup-store.workspace = true
llmup-download.workspace = true
anyhow.workspace = true
