[package]
name = "llmup-download"
version = "0.1.0"
edition = "2024"

[dependencies]
llmup-store = { version = "0.1", path = "../llmup-store" }

reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
url = "2"
indicatif = "0.17"
thiserror = "2"

futures-util = "0.3"
