[package]
name = "llmup-download"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "Llmup Utilities for download"

[dependencies]
skelm-ollama.workspace = true
tokio.workspace = true
thiserror.workspace = true

reqwest = { version = "0.12", features = ["stream"] }
url = "2"
futures-util = "0.3"
