[package]
name = "llmup-llama-cpp-sys"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "Llmup system wrapper for llama.cpp"

[dependencies]
link-cplusplus = "1"

[build-dependencies]
bindgen = "0.72"
cc = { version = "1.2", features = ["parallel"] }

[features]
defaults = []
metal = []
