[package]
name = "llmup-llama-cpp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "Llmup rust safe wrapper for llama.cpp"

[dependencies]
llmup-llama-cpp-sys.workspace = true
thiserror.workspace = true
