[package]
name = "llmup-run"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Llmup abstraction for running LLM"

[dependencies]
skelm-ollama.workspace = true
llmup-download.workspace = true
llmup-llama-cpp.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono = "*"
ctrlc = "3.5"
serde_json = "1"
minijinja = { version = "2" }
minijinja-contrib = { version = "2", features = ["pycompat"] }

#[target.'cfg(target_os = "macos")'.dependencies]
#mlx-lm = { workspace = true, optional = true }
#mlx-lm-utils = { workspace = true, optional = true }

[features]
default = ["mlx"]
#mlx = ["dep:mlx-lm", "dep:mlx-lm-utils"]
mlx = []
