[package]
name = "skelm-llama-cpp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "skelm rust safe wrapper for llama.cpp"

[dependencies]
skelm-llama-cpp-sys.workspace = true
thiserror.workspace = true
