[package]
name = "skelm-ollama"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
cryptoxide = "0.5"
ulid = "1.2"
url = "2"
chrono = "*"
gtmpl = { version = "0.7" }
thiserror.workspace = true
anyhow.workspace = true
